<resources>
    <string name="app_name">ShopApp</string>
    <string name="CheckInternet">Check your internet connection</string>
    <string name="myProducts">My Products</string>
    <string name="projectName">Product Name</string>
    <string name="projectPrice">Product Price</string>
    <string name="addProduct">Add Product</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerNow">Register now</string>
    <string name="doYouHaveAccount">Don’t have an account yet?</string>
    <string name="myOrders">My orders</string>
    <string name="showProducts">Show Products</string>
    <string name="shops">SHOPS</string>
    <string name="signUp">SIGN UP</string>
    <string name="fullName">Full name</string>
    <string name="phone">Full name</string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="clickHere">Click here to deliver the order</string>
    <string name="Quantity">Quantity</string>
    <string name="OrderDate">Order Date</string>
    <string name="Address">Address</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="shopDetails">Shop Details</string>
    <string name="shopName">Confirm</string>
    <string name="shopMail">Shop mail</string>
    <string name="shopPhone">Shop phone</string>
    <string name="Create">Create</string>
    <string name="storagePermission">Storage permission required!</string>
    <string name="Grant">Grant</string>
    <string name="strorageHeadline">Grant storage permission to upload images</string>
    <string name="quantity">"Quantity : "</string>
    <string name="seller">Seller :</string>
    <string name="myTotalPrice">Total Price :</string>
    <string name="orderDone">Status : Order Delivered</string>
    <string name="orderPending">Status : Order Pending</string>
    <string name="custumerName">"Customer Name : "</string>
    <string name="productAdded">Product added successfully</string>
    <string name="productDeleted">Product deleted successfully</string>
    <string name="updated">Successfully uploaded</string>
    <string name="failed">Failed !</string>
    <string name="selectImage">Please select image</string>
    <string name="enterName">Enter product Name</string>
    <string name="enterPrice">Enter price</string>
    <string name="emailEmpty">email empty</string>
    <string name="ivaildEmail">Invalid email !</string>
    <string name="passEmpty">pass empty</string>
    <string name="passLimit">password at least 6 character</string>
    <string name="loginDone">login successfully</string>
    <string name="loginFail">Login Failed !</string>
    <string name="orderCancel">Order canceled successfully</string>
    <string name="orderDoneDone">Order delivered successfully</string>
    <string name="price">Price:</string>
    <string name="enterQuntity">Enter quantity</string>
    <string name="enterDate">Enter Date</string>
    <string name="enterAddress">Enter quantity</string>
    <string name="orderPlaced">Order Placed successfully</string>
    <string name="enterShopNAme">Enter Shop name</string>
    <string name="enterphone">Enter phone no</string>
    <string name="shopUpadted">Shop is Updated</string>
    <string name="uploaded">Successfully uploaded</string>
    <string name="truagain">Please try again</string>
    <string name="noData">No data found !</string>
    <string name="hello">"Hello "</string>
    <string name="haveAShop">Do you want open a shop ?</string>
    <string name="shopCreated">Shop is created</string>
    <string name="signUpDone">Registration successfully</string>

</resources>