<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/permission_alert_icon"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/red_location_icon"
                android:id="@+id/location_heading_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storagePermission"
                android:textColor="#EF233C"
                android:fontFamily="@font/nunito"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/strorageHeadline"
                android:fontFamily="@font/nunito"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="#4F4F4F"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <Button
                android:id="@+id/grant_permission_BT"
                android:layout_width="165dp"
                android:layout_height="40dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:text="@string/Grant"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/nunito"/>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>