<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="12dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading_TV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="@string/shopDetails"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shopName_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/heading_TV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shopName_TIET"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito"
                    android:inputType="textCapSentences"
                    android:hint="@string/shopName"
                    android:textColorHint="@color/grey" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shopMail_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/shopName_TIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shopMail_TIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/shopMail"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/grey" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shopPhone_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/shopMail_TIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shopPhone_TIET"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/shopPhone"
                    android:gravity="center"
                    android:textColorHint="@color/grey" />


            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/button_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/shopPhone_TIL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/cancel_BT"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/red_border_bg"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:text="@string/Cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <Button
                    android:id="@+id/create_BT"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:text="@string/Create"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>