<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/product_name_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:gravity="center"
                android:text="MOBILE"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:text="@string/Quantity"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:id="@+id/quantity_ET"
                    android:hint="@string/Quantity"
                    android:inputType="number"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:text="@string/OrderDate"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/date_TV"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:hint="mm/dd/yyy"
                    android:textColor="@color/black"
                    android:textSize="22sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:text="@string/Address"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/address_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:hint="@string/Address"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/cancel_BT"
                    android:gravity="center"
                    android:text="@string/Cancel"
                    android:textAllCaps="false"
                    android:background="@drawable/red_border_bg"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/placeOrder_BT"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:text="@string/Confirm"
                    android:textSize="18sp"
                    android:textColor="@color/white" />


            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>